kubernetes/landings/02-deployments.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: landings
  labels:
    app: wordpress
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        k8s-app: landing-wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress:4.7.3-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        cephfs:
          monitors:
            - 192.168.10.1:6789
            - 192.168.10.6:6789
          user: admin
          secretRef:
            name: ceph-secret
          path: "/landings/wp"
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: clickyab-com
  namespace: landings
  labels:
    app: clickyab-com-landing
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: clickyab-com
        k8s-app: landing-home
        tier: frontend
    spec:
      containers:
      - image: registry.clickyab.ae/clickyab/console:clickyab.com.23
        name: clickyab-com
        ports:
        - containerPort: 80
          name: clickyab-com
