kubernetes/landings/06-01-service-clickyab-com-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickyab-com-service
  namespace: landings
  labels:
    k8s-app: landing-home
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "ClickyabService"
spec:
  selector:
    k8s-app: landing-home
  ports:
  - name: landing-home
    targetPort: 80
    port: 9000
    protocol: TCP
