kubernetes/landings/04-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: landings-ingress
  namespace: landings
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: clickyab.com
    http:
      paths:
      - path: /blog
        backend:
          serviceName: wordpress-service
          servicePort: 9000
  - host: www.clickyab.com
    http:
      paths:
      - path: /blog
        backend:
          serviceName: wordpress-service
          servicePort: 9000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: home-ingress
  namespace: landings
spec:
  rules:
  - host: clickyab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: clickyab-com-service
          servicePort: 9000
  - host: www.clickyab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: clickyab-com-service
          servicePort: 9000
