kubernetes/landings/07-01-ingress-home-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: home-ingress
  namespace: landings
spec:
  rules:
  - host: clickyab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: clickyab-com-service
          servicePort: 9000
  - host: www.clickyab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: clickyab-com-service
          servicePort: 9000
